# deep-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/paper_research_agent/: config.py  llm.py  tui.py
src/paper_research_agent/agent/: graph.py  nodes.py  registry.py  router.py
src/paper_research_agent/core/: models.py  state.py
src/paper_research_agent/features/conflicts/: node.py  prompts.py
src/paper_research_agent/features/contrast/: __init__.py  node.py  prompts.py  schemas.py
src/paper_research_agent/features/coverage/: __init__.py  node.py  prompts.py  schemas.py
src/paper_research_agent/features/fetching/: __init__.py  dedup.py  mcp_search.py  node.py  service.py
src/paper_research_agent/features/novelty/: __init__.py  node.py  prompts.py  schemas.py
src/paper_research_agent/features/planning/: node.py  prompts.py  schemas.py
src/paper_research_agent/features/qa/: __init__.py  node.py  prompts.py
src/paper_research_agent/features/reading/: __init__.py  chunking.py  excerpt.py  fetcher.py  indexing.py  node.py
src/paper_research_agent/features/writing/: __init__.py  node.py  prompts.py
src/paper_research_agent/memory/: nodes.py  results.py  store.py
src/paper_research_agent/providers/: __init__.py  arxiv.py
src/paper_research_agent/tools/: __init__.py
tests/: test_contrast.py  test_coverage.py  test_fetching.py  test_graph.py  test_llm.py  test_loop.py  test_mcp.py  test_memory.py  test_novelty.py  test_planning.py  test_reading.py  test_router.py  test_writing.py
tests/integration/: test_providers.py
