[project]
name = "paper-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "anthropic>=0.107.1",
    "arxiv>=4.0.0",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "google-genai>=2.8.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "trafilatura>=2.1.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
paper-research = "paper_research_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_research_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: hits real external APIs (run with: pytest -m integration)",
]
